<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Stop auto focussing the EditText -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/searchByCodeInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/search_margin">

        <EditText
            android:id="@+id/etSearchByCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_code_here"
            android:imeOptions="actionSearch"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/searchByNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/searchByCodeInputLayout"
        android:layout_margin="2dp">

        <EditText
            android:id="@+id/etSearchByName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name_here"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/AutoCompleteTextViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_below="@id/searchByNameInputLayout">
    <AutoCompleteTextView
        android:id="@+id/search_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dropDownVerticalOffset="5dp"
        android:dropDownWidth="wrap_content"
        android:inputType="textAutoComplete"
        android:popupBackground="@color/white"
        android:textColor="#5b2626"

        android:hint="Поставщик"

        android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/AutoCompleteTextViewLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/search" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/AutoCompleteTextViewLayout"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/clear" />

    <!--com.journeyapps.barcodescanner.CompoundBarcodeView
        android:id="@+id/zxing_barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:zxing_scanner_layout="@layout/custom_barcode_scanner"
        android:layout_below="@id/btnClear"/-->

    <com.journeyapps.barcodescanner.CompoundBarcodeView
        android:id="@+id/zxing_barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/btnClear"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        app:zxing_preview_scaling_strategy="fitXY"

        app:zxing_use_texture_view="false" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/switch_flashlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/zxing_barcode_scanner"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/flashlight_32"
        app:backgroundTint="@color/torchOff" />

</RelativeLayout>